samples/_failures_safe/1761392175_b8907f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63164253.c: In function ‘main’:
./samples/SAFE/__tmp_63164253.c:159:45: error: expected ‘)’ at end of input
  159 |     if (process_text(&processor, input) != 0
      |        ~                                    ^
      |                                             )
./samples/SAFE/__tmp_63164253.c:159:5: error: expected declaration or statement at end of input
  159 |     if (process_text(&processor, input) != 0
      |     ^~
